src/test/ui/array-slice-vec/match_arr_unknown_len.stderr
warning: the feature `const_generics` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/match_arr_unknown_len.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: consider using `min_const_generics` instead, which is more stable and complete

error[E0308]: mismatched types
  --> $DIR/match_arr_unknown_len.rs:6:9
   |
LL |         [1, 2] => true,
   |         ^^^^^^ expected `2_usize`, found `N`
   |
   = note: expected array `[u32; 2]`
              found array `[u32; N]`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.
